observer and feedback