@@ -15,9 +15,9 @@ public class Booking extends UnicastRemoteObject {
         return new ArrayList<>(bookingQueues.keySet());
     }
 
-    public Set<Bike> getBikeRentByUser(User user) throws RemoteException {
+    public Set<Bike> rentBikesOfUser(User user) throws RemoteException {
         return bookingQueues.entrySet().stream()
-                .filter(iBikeLinkedListEntry -> iBikeLinkedListEntry.getValue().get(0).equals(user))
+                .filter(iBikeLinkedListEntry -> iBikeLinkedListEntry.getValue().getFirst().equals(user))
                 .map(Map.Entry::getKey)
                 .collect(Collectors.toSet());
     }
@@ -26,11 +26,16 @@ public class Booking extends UnicastRemoteObject {
         bookingQueues.computeIfAbsent(bike, bike1 -> new LinkedList<>());
     }
 
-    public void rent(Bike bike, User user) throws RemoteException{
+    public boolean rent(Bike bike, User user) throws RemoteException {
         LinkedList<User> userLinkedList =
                 bookingQueues.computeIfAbsent(bike, bike1 -> new LinkedList<>());
 
         userLinkedList.addLast(user);
+
+        if (userLinkedList.getFirst().equals(user)) {
+            return true;
+        }
+        return false;
     }
 
     public boolean isFree(Bike bike) throws RemoteException{
